traccia_1_4_Salesforce/force-app/main/default/objects/utenza_cliente__c/utenza_cliente__c.object-meta.xml
<CustomObject>
    <label>Utenza Cliente</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utenze Clienti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>