traccia_1_4_Salesforce/force-app/main/default/objects/utenza_cliente__c/fields/activation_token__c.field-meta.xml
<CustomField>
    <fullName>activation_token__c</fullName>
    <label>activation_token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>