traccia_1_4_Salesforce/force-app/main/default/objects/utenza_cliente__c/fields/cellulare__c.field-meta.xml
<CustomField>
    <fullName>cellulare__c</fullName>
    <label>cellulare</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>