traccia_1_4_Salesforce/force-app/main/default/objects/utenza_cliente__c/fields/nome__c.field-meta.xml
<CustomField>
    <fullName>nome__c</fullName>
    <label>nome</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>