traccia_1_4_Salesforce/force-app/main/default/objects/utenza_cliente__c/validationRules/VR_Cellulare.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Cellulare</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(cellulare__c, &quot;^[0-9]{9,15}$&quot;))</errorConditionFormula>
    <errorDisplayField>cellulare__c</errorDisplayField>
    <errorMessage>Il numero di cellulare deve contenere solo cifre e avere una lunghezza tra 9 e 15 caratteri.</errorMessage>
</ValidationRule>