traccia_1_4_Salesforce/force-app/main/default/objects/utenza_cliente__c/validationRules/VR_email.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_email</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(email__c, &quot;^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$&quot;))</errorConditionFormula>
    <errorDisplayField>email__c</errorDisplayField>
    <errorMessage>Inserire un indirizzo email valido (esempio: nome@dominio.com)</errorMessage>
</ValidationRule>