traccia_1_4_Salesforce/force-app/main/default/objects/utenza_cliente__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>nome__c</columns>
    <columns>cognome__c</columns>
    <columns>email__c</columns>
    <columns>cellulare__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>